--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ atomicwrites==1.4.0
 attrs==21.2.0
 colorama==0.4.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==3.2.3
 django-crispy-forms==1.11.2
+django-heroku==0.3.1
 django-jquery==3.1.0
 gunicorn==20.1.0
 importlib-metadata==4.0.1
@@ -17,6 +19,7 @@ packaging==20.9
 pandas==1.2.4
 Pillow==8.2.0
 pluggy==0.13.1
+psycopg2==2.8.6
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
